--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ whitenoise==6.8.2
 psycopg2-binary==2.9.10
 dj-database-url==2.3.0
 python-decouple==3.8
+cloudinary==1.41.0
+django-cloudinary-storage==0.3.0
