Add ImgBB as image storage alternative

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,13 @@ ALLOWED_HOSTS=localhost,127.0.0.1,.onrender.com
 # CORS Origins (comma-separated, add your Netlify URL)
 CORS_ALLOWED_ORIGINS=http://localhost:5173,https://your-netlify-url.netlify.app
 
-# Cloudinary Configuration (from https://cloudinary.com/console)
+# Image Storage - Choose ONE option:
+
+# Option 1: ImgBB (Recommended - Simple & Free)
+# Get your API key: https://api.imgbb.com/
+IMGBB_API_KEY=your-imgbb-api-key
+
+# Option 2: Cloudinary (Alternative)
 CLOUDINARY_CLOUD_NAME=your-cloud-name
 CLOUDINARY_API_KEY=your-api-key
 CLOUDINARY_API_SECRET=your-api-secret
